[package]
name = "ppp-stream"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/conblem/ppp-stream"
description = "Adds ProxyProtocol parsing to AsyncRead"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ppp = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util =  { version = "0.7", features = ["io"] }
futures-util = "0.3"

[dev-dependencies]
tokio-util =  { version = "0.7", features = ["io-util"] }
